[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stochbenders"
version = "0.1.0"
description = "Structure-exploiting Benders decomposition framework for large-scale MILPs"
authors = [
    { name = "Roozbeh Abolpour" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.23",
    "pyomo>=6.6",
    "highspy>=1.6"
]

keywords = [
    "optimization",
    "milp",
    "benders-decomposition",
    "stochastic-optimization",
    "decomposition"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stochbenders*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
